Archive2/1c/ca94237ee00ea3/output
main.cpp:10:11: error: excess elements in struct initializer
    Foo y{x}; // error here
          ^
1 error generated.
