Archive2/1c/ca94237ee00ea3/main.cpp
struct Foo
{
    Foo() = default;
    Foo(const Foo&) = default;
};

int main()
{
    Foo x;
    Foo y{x}; // error here
}